--- a/style.css
+++ b/style.css
@@ -30,17 +30,92 @@ body {
     grid-column: 2 / 3;
     grid-row: 1 / 2;
     background-color: var(--clr-white);
+    display: grid;
+    grid-template-columns: 3fr minmax(220px, 1fr);
+    grid-template-rows: 1fr 1fr;
+    padding: 0 30px;
+    box-shadow: 1px 1px 10px 1px rgba(0, 0, 0, 0.2);
+    position: relative;
+    z-index: 0;
+}
+
+.header > div {
+    /* border: 1px solid red; */
     display: flex;
+    align-items: center;
+}
+
+.header .search-bar {
+    grid-column: 1 / 2;
+    grid-row: 1 / 2;
+}
+
+.header input[type="search"] {
+    font-size: 1.1rem;
+    background-color: var(--clr-background);
+    border: none;
+    border-radius: 2rem;
+    padding: 0.2rem 0.6rem;
+    /* margin: 0 20px; */
+    width: 95%;
+    margin-right: 20px;
+}
+
+.header .profile-indicator {
+    grid-column: 2 / 3;
+    grid-row: 1 / 2;
+    justify-content: flex-end   ;
+    gap: 30px;
+}
+
+.profile-indicator .user-picture {
+    height: 50px;
+    border-radius: 50%;
+}
+
+.profile-indicator h2 {
+    font-size: 1.4rem;
+}
+
+.header .current-view {
+    grid-column: 1 / 2;
+    grid-row: 2 / 3;
+    justify-content: flex-start;
+    font-size: 1.6rem;
+}
+
+.header .buttons {
+    grid-column: 2 / 3;
+    grid-row: 2 / 3;
+    justify-content: center;
+    gap: 25px;
+}
+
+.buttons button {
+    background-color: var(--clr-main);
+    color: var(--clr-white);
+    width: 100px;
+    padding: 10px 10px;
+    border-radius: 50px;
+    border: none;
+    font-weight: bold;
+    border: 2px solid var(--clr-main);
+}
+
+.buttons button:hover {
+    background-color: var(--clr-white);
+    color: var(--clr-main);
+}
+
+.buttons button:active {
+    background-color: var(--clr-main);
+    color: var(--clr-white);
 }
 
 .header img {
     height: 25px;
 }
 
-.header .user-picture {
-    height: 80px;
-    border-radius: 50%;
-}
 
 .sidebar {
     grid-column: 1 / 2;
