--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
     --clr-accent: #e9b532;
     --clr-background: #e1e8f0;
     --clr-light-text: #878787;
+    --svg-white: invert(91%) sepia(2%) saturate(537%) hue-rotate(347deg) brightness(109%) contrast(99%);
 
 
     font-size: 16px;
@@ -21,8 +22,8 @@
 
 body {
     display: grid;
-    grid-template-columns: 250px auto;
-    grid-template-rows: 150px auto;
+    grid-template-columns: 250px 1fr;
+    grid-template-rows: 150px 1fr;
     min-height: 100vh;
 }
 
@@ -40,7 +41,6 @@ body {
 }
 
 .header > div {
-    /* border: 1px solid red; */
     display: flex;
     align-items: center;
 }
@@ -56,7 +56,6 @@ body {
     border: none;
     border-radius: 2rem;
     padding: 0.2rem 0.6rem;
-    /* margin: 0 20px; */
     width: 95%;
     margin-right: 20px;
 }
@@ -116,19 +115,79 @@ body {
     height: 25px;
 }
 
-
 .sidebar {
     grid-column: 1 / 2;
     grid-row: 1 / 3;
     background-color: var(--clr-main);
+    color: var(--clr-white);
+    display: grid;
+    grid-template-rows: auto 1fr;
+    gap: 40px;
+    padding: 10px 20px;
+
 }
 
-.logo {
-    height: 60px;
+.sidebar img {
+    filter: var(--svg-white);
+}
+
+.sidebar .title {
+    grid-row: 1 / 2;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.title .logo {
+    height: 70px;
+}
+
+.title h1 {
+    font-size: 1.8rem;
+}
+
+.title p {
+    font-size: 0.8rem;
+    margin-left: 22px;
+}
+
+.sidebar .title .text-title {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.navbar {
+    grid-row: 2 / 3;
+    display: grid;
+    grid-template-rows: auto auto 1fr;
+    gap: 40px;
+}
+
+.navbar .status-group {
+    grid-row: 1 / 2;
+}
+
+.navbar .user-lists {
+    grid-row: 2 / 3;
+}
+
+.navbar .preferences {
+    grid-row: 3 / 4;
+}
+
+.navbar li {
+    display: flex;
+    align-items: center;
+    margin: 20px 0;
+    font-weight: bold;
+    font-size: 1.1rem;
 }
 
 .navbar img {
     height: 25px;
+    margin-right: 15px;
 }
 
 .main {
