Add main area and card styling

--- a/style.css
+++ b/style.css
@@ -190,8 +190,23 @@ body {
     margin-right: 15px;
 }
 
-.main {
+.book-area {
     grid-column: 2 / 3;
     grid-row: 2 / 3;
     background-color: var(--clr-background);
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    gap: 25px;
+    padding: 30px 20px;
+}
+
+.book-card {
+    width: auto;
+    background-color: var(--clr-white);
+    padding: 30px 20px;
+    border-radius: 10px;
+    border-left: 10px solid var(--clr-accent);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
