--- a/style.css
+++ b/style.css
@@ -194,7 +194,8 @@ body {
     grid-row: 2 / 3;
     background-color: var(--clr-background);
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    grid-auto-rows: max-content;
     gap: 25px;
     padding: 30px 20px;
 }
@@ -208,4 +209,6 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    align-items: center;
+    text-align: center;
 }
