--- a/style.css
+++ b/style.css
@@ -213,3 +213,21 @@ body {
     align-items: center;
     text-align: center;
 }
+
+/* New book form style */
+
+.new-book-card {
+    width: 300px;
+    height: 400px;
+    background-color: var(--clr-white);
+    padding: 30px 20px;
+    border: 3px solid var(--clr-main);
+    border-radius: 10px;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translateY(-40%);
+    /* transform: translate(-0%, -50%) translate(0, 0); */
+    /* margin-top: 10px; */
+
+}
