--- a/style.css
+++ b/style.css
@@ -224,7 +224,7 @@ body {
     position: fixed;
     top: 50%;
     left: 50%;
-    transform: translateY(-40%);
+    transform: translate(-18%, -40%);
     display: flex;
     flex-direction: column;
     justify-content: center;
