--- a/style.css
+++ b/style.css
@@ -217,6 +217,8 @@ body {
 /* New book form style */
 
 .new-book-card {
+    position: relative;
+    z-index: 5;
     background-color: var(--clr-white);
     padding: 20px 20px;
     border: 3px solid var(--clr-main);
@@ -224,11 +226,16 @@ body {
     position: fixed;
     top: 50%;
     left: 50%;
-    transform: translate(-18%, -40%);
+    transform: translate(-18%, -40%) scale(0);
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    transition: 0.5s all;
+}
+
+.new-book-card.visible {
+    transform: translate(-18%, -40%) scale(1);
 }
 
 .new-book-card * {
