--- a/style.css
+++ b/style.css
@@ -212,9 +212,17 @@ body {
     justify-content: space-between;
     align-items: center;
     text-align: center;
+    gap: 10px;
 }
 
 .book-card button {
+    width: 100px;
+    font-size: 1rem;
+    font-family: var(--ff-roboto);
+    padding: 2px;
+}
+
+.book-card .delete-btn {
     background-color: red;
     height: 20px;
     width: 20px;
@@ -230,11 +238,11 @@ body {
     opacity: 0;
 }
 
-.book-card:hover button {
+.book-card:hover .delete-btn {
     opacity: 1;
 }
 
-.book-card button img {
+.book-card .delete-btn img {
     height: 70%;
     filter: var(--svg-white);
 }
