Add styling to read status

--- a/style.css
+++ b/style.css
@@ -219,8 +219,19 @@ body {
     width: 100px;
     font-size: 1rem;
     font-family: var(--ff-roboto);
-    padding: 2px;
+    padding: 5px;
+    border: none;
+    border-radius: 5px;
 }
+
+button.read {
+    background-color: rgb(132, 213, 132);
+} 
+
+button.not-read {
+    background-color: rgb(255, 166, 166);
+}
+
 
 .book-card .delete-btn {
     background-color: red;
